// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag (only) renders correctly 1`] = `
<DocumentFragment>
  <span
    class="css-uemksw"
  >
    A
  </span>
</DocumentFragment>
`;

exports[`Tag with close button renders correctly 1`] = `
<DocumentFragment>
  <span
    class="css-uemksw"
  >
    <span
      class="css-1h8gyx6"
    >
      B
    </span>
    <button
      class="css-pi0mvu"
    >
      <svg
        class="chakra-icon css-vp3v0l"
        focusable="false"
        role="presentation"
        viewBox="0 0 512 512"
      >
        <path
          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
          fill="currentColor"
        />
      </svg>
    </button>
  </span>
</DocumentFragment>
`;

exports[`Tag with left icon renders correctly 1`] = `
<DocumentFragment>
  <span
    class="css-uemksw"
  >
    <svg
      class="chakra-icon css-40jgb2"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <g
        fill-rule="evenodd"
      >
        <circle
          cx="12"
          cy="12"
          fill="currentColor"
          r="10"
        />
        <circle
          cx="12"
          cy="18"
          fill="inherit"
          r="1"
        />
        <path
          d="M15.89 9.05a3.975 3.975 0 0 0-2.957-2.942C10.321 5.514 8.017 7.446 8 9.95l.005.147a.992.992 0 0 0 .982.904c.552 0 1-.447 1.002-.998a2.004 2.004 0 0 1 4.007-.002c0 1.102-.898 2-2.003 2H12a1 1 0 0 0-1 .987v2.014a1.001 1.001 0 0 0 2.004 0v-.782c0-.217.145-.399.35-.472A3.99 3.99 0 0 0 15.89 9.05"
          fill="inherit"
        />
      </g>
    </svg>
    <span
      class="css-1h8gyx6"
    >
      C
    </span>
    <button
      class="css-pi0mvu"
    >
      <svg
        class="chakra-icon css-vp3v0l"
        focusable="false"
        role="presentation"
        viewBox="0 0 512 512"
      >
        <path
          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
          fill="currentColor"
        />
      </svg>
    </button>
  </span>
</DocumentFragment>
`;
